--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,56 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Country Holidays</title>
+    <title>Country Holidays | Angular Application</title>
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Country Holidays is an Angular application that provides information about countries, their public holidays, and neighboring countries using the Nager.Date API. Search for countries, view details about holidays, and explore random countries with upcoming holidays." />
+    <link rel="alternate" hreflang="x-default" title="English" href="https://holidays-country.vercel.app" />
+    <link rel="canonical" href="https://holidays-country.vercel.app" />
+    <meta name="creator" content="https://semklim.vercel.app/" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Country Holidays - Angular Application" />
+    <meta
+      property="og:description"
+      content="Country Holidays is an Angular application that provides information about countries, their public holidays, and neighboring countries using the Nager.Date API. Search for countries, view details about holidays, and explore random countries with upcoming holidays." />
+    <meta property="og:url" content="https://holidays-country.vercel.app" />
+    <meta property="og:image" content="./assets/Countries-Public-Holidays.png" />
+    <meta property="og:image:alt" content="Country Holidays" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Country Holidays - Angular Application" />
+    <meta
+      name="twitter:description"
+      content="Country Holidays is an Angular application that provides information about countries, their public holidays, and neighboring countries using the Nager.Date API. Search for countries, view details about holidays, and explore random countries with upcoming holidays." />
+    <meta name="twitter:url" content="https://holidays-country.vercel.app" />
+    <meta name="twitter:image" content="./assets/Countries-Public-Holidays.png" />
+    <meta name="twitter:image:alt" content="Country Holidays" />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicons/favicon-16x16.png" />
+    <link rel="manifest" href="./assets/favicons/site.webmanifest" />
+    <link rel="mask-icon" href="./assets/favicons/safari-pinned-tab.svg" color="#5bbad5" />
+    <link rel="shortcut icon" href="./assets/favicons/favicon.ico" />
+    <meta name="apple-mobile-web-app-title" content="Country Holidays" />
+    <meta name="application-name" content="Country Holidays" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="msapplication-config" content="./assets/favicons/browserconfig.xml" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- Additional meta tags -->
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow, max-video-preview:-1, max-image-preview:large, max-snippet:-1" />
+    <meta name="author" content="Roman Klymashenko" />
+    <meta
+      name="keywords"
+      content="Country Holidays, Angular Application, Public Holidays, Country Info, Nager.Date API, Random Countries, Angular" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <app-root></app-root>
